--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@capacitor/android": "^2.0.2",
     "@capacitor/core": "2.0.2",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/http": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "axios": "^0.19.2",
+    "cordova-plugin-advanced-http": "^2.4.1",
+    "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
+    "ngx-countup": "^7.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
